# data-meshy

./: .gitignore
.github/workflows/: cli-test.yml  infra-apply.yml  infra-plan.yml  product-spec-validate.yml  release-modules.yml  reusable-infra-apply.yml  reusable-infra-plan.yml  reusable-product-validate.yml
cli/: pyproject.toml
cli/datameshy/: __init__.py  cli.py
cli/datameshy/commands/: __init__.py  catalog.py  domain.py  product.py  subscribe.py
cli/datameshy/lib/: __init__.py  aws_client.py  spec_parser.py  terraform_runner.py
cli/datameshy/templates/domain_repo/: .datameshy.toml.j2  README.md.j2
cli/datameshy/templates/domain_repo/.github/workflows/: infra-apply.yml.j2  infra-plan.yml.j2  product-validate.yml.j2
cli/datameshy/templates/domain_repo/infra/: backend.tf.j2  main.tf.j2  outputs.tf.j2  terraform.tfvars.j2  variables.tf.j2
cli/tests/: __init__.py  conftest.py  test_aws_client.py  test_cli_catalog.py  test_cli_domain.py  test_cli_product.py  test_cli_subscribe.py  test_domain_init.py  test_product_deprecate.py  test_product_import.py  test_product_rollback.py  test_spec_parser.py  test_terraform_runner.py
docs/: README.md
docs/architecture/: ACCOUNT-STRUCTURE.md  EVENT-MESH.md  MEDIATION-PIPELINE.md  OVERVIEW.md  (+1 more)
lambdas/: audit_writer.py  catalog_browse.py  catalog_describe.py  catalog_search.py  catalog_writer.py  datazone_connector.py  event_validator.py  freshness_monitor.py  product_deprecation.py  retirement.py  subscription_compensator.py  subscription_provisioner.py  subscription_request.py
schemas/: product_spec.json
(+117 files in other folders)
