[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datameshy"
version = "0.1.0"
description = "Data Meshy CLI — self-serve data mesh management on AWS"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "typer[all] >= 0.12",
    "boto3 >= 1.34",
    "botocore >= 1.34",
    "requests >= 2.31",
    "pyyaml >= 6.0",
    "jsonschema >= 4.21",
    "rich >= 13.0",
    "jinja2 >= 3.1",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "pytest-mock >= 3.12",
    "moto[all] >= 5.0",
    "pytest-cov >= 5.0",
    "faker >= 24.0",
]

[project.scripts]
datameshy = "datameshy.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["datameshy"]
artifacts = ["datameshy/schemas/*.json", "datameshy/templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=datameshy --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["datameshy"]
omit = ["tests/*"]
